test: OrderServiceTest의 테스트 코드 전체 수정
ProductDao 객체 활용
ProductServiceTest 내부에 fixture 메서드 생성